--- a/index.html
+++ b/index.html
@@ -3653,7 +3653,7 @@
 				if (sortListsAZ) {
 					names = names.sort((a, b) => a.localeCompare(b, 'fr', { sensitivity: 'base' }));
 				}
-				names.forEach(listName => { ... 
+				names.forEach(listName => {
                 	const card = document.createElement('div');
                 	card.className = 'list-card';
 
