--- a/index.html
+++ b/index.html
@@ -1716,30 +1716,35 @@
 		}
 		.floating-last-card{
 			position: fixed;
-			right: 20px;
-			bottom: 20px;
-			width: 48px;
-			height: 48px;
-			border-radius: 14px;
-			border: none;
-			cursor: pointer;
+			right: 12px;
+			bottom: 12px;
+
+			width: 26px !important;
+			height: 26px !important;
+			min-width: 0 !important;
+			padding: 0 !important;
+
+			border-radius: 999px;
+			border: 1px solid rgba(255,255,255,0.15);
+
+			background: rgba(0,0,0,0.35); /* minimaliste */
+			color: white;
+
+			font-size: 13px !important;
+			line-height: 1 !important;
+			font-weight: 900;
+
+			box-shadow: 0 6px 16px rgba(0,0,0,0.25);
 			z-index: 3000;
 
-			background: linear-gradient(135deg, var(--accent) 0%, var(--accent-2) 100%);
-			color: white;
-			font-size: 18px;
-			font-weight: 900;
-			box-shadow: 0 6px 18px rgba(0,0,0,0.25);
-
-			display: none; /* caché par défaut */
-		}
-
-/* visible uniquement sur la page manage */
-		.page#managePage.active ~ #btnGoLastCard,
-		.page#managePage.active + #btnGoLastCard{
-			display: flex;
+			display: none;
 			align-items: center;
 			justify-content: center;
+		}
+
+		.floating-last-card:hover{
+			background: rgba(0,0,0,0.5);
+			transform: scale(1.05);
 		}
     </style>
 </head>
