--- a/index.html
+++ b/index.html
@@ -3669,6 +3669,53 @@
 			}, 0);
 		}
 
+		function initComparator() {
+			const compareBtn = document.getElementById('compareBtn');
+			const copyBtn = document.getElementById('copyBtn');
+
+			if (compareBtn) compareBtn.onclick = runComparator;
+			if (copyBtn) copyBtn.onclick = copyComparatorResult;
+		}
+
+		function runComparator() {
+			const oldText = document.getElementById('oldText')?.value || '';
+			const newText = document.getElementById('newText')?.value || '';
+
+			const changesList = document.getElementById('changesList');
+			const diffOutput = document.getElementById('diffOutput');
+			if (!changesList || !diffOutput) return;
+
+	// reset
+			changesList.innerHTML = '';
+			diffOutput.innerHTML = '';
+
+	// calc diff (exemple "mots")
+			const parts = Diff.diffWords(oldText, newText);
+
+	// 1) output principal
+			diffOutput.innerHTML = parts.map(p => {
+				if (p.added) return `<mark class="ins">${escapeHtml(p.value)}</mark>`;
+				if (p.removed) return `<mark class="del">${escapeHtml(p.value)}</mark>`;
+				return escapeHtml(p.value);
+			}).join('');
+
+	// 2) historique / liste des changements
+			const changes = parts
+				.map((p, idx) => ({...p, idx}))
+				.filter(p => p.added || p.removed);
+
+			changes.forEach(ch => {
+				const btn = document.createElement('button');
+				btn.className = 'comp-change';
+				btn.type = 'button';
+				btn.innerHTML = (ch.added ? '➕ Insertion' : '➖ Suppression') + `<span class="ctx">${escapeHtml(ch.value).slice(0, 80)}</span>`;
+				btn.onclick = () => {
+			// optionnel: scroller le diffOutput, ou surligner
+				};
+				changesList.appendChild(btn);
+			});
+		}
+
 		function sanitizeResultsForList(resultsObj, cardsLength) {
 			if (!resultsObj || typeof resultsObj !== 'object') return {};
 
@@ -4904,6 +4951,7 @@
         function openComparator() {
             document.getElementById('comparatorModal').classList.add('show');
             document.body.style.overflow = 'hidden';
+			initComparator();
         }
 
         function closeComparator() {
