--- a/index.html
+++ b/index.html
@@ -1773,6 +1773,27 @@ mark.ins { box-shadow: inset 0 -0.45em rgba(34,197,94,0.6); border-color: rgba(3
 			background: rgba(0,0,0,0.5);
 			transform: scale(1.05);
 		}
+
+		.hist-item{
+			width: 100%;
+			text-align: left;
+			padding: 10px 12px;
+			border-radius: 10px;
+			border: 1px solid rgba(255,255,255,0.12);
+			background: rgba(255,255,255,0.06);
+			color: #fff;
+			cursor: pointer;
+		}
+
+		.hist-item.hist-add{
+			border-color: rgba(31,191,71,0.55);
+			box-shadow: inset 0 0 0 999px rgba(31,191,71,0.14);
+		}
+
+		.hist-item.hist-del{
+			border-color: rgba(255,92,92,0.55);
+			box-shadow: inset 0 0 0 999px rgba(255,92,92,0.14);
+		}
     </style>
 </head>
 <body onload="checkAuth()">
